; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_partition.c_get_proposed_default_constraint.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_partition.c_get_proposed_default_constraint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NOT_EXPR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_proposed_default_constraint(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @make_ands_explicit(i32* %4)
  store i32* %5, i32** %3, align 8
  %6 = load i32, i32* @NOT_EXPR, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @list_make1(i32* %7)
  %9 = call i32* @makeBoolExpr(i32 %6, i32 %8, i32 -1)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @eval_const_expressions(i32* null, i32* %10)
  %12 = inttoptr i64 %11 to i32*
  store i32* %12, i32** %3, align 8
  %13 = load i32*, i32** %3, align 8
  %14 = call i32* @canonicalize_qual(i32* %13, i32 1)
  store i32* %14, i32** %3, align 8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @make_ands_implicit(i32* %15)
  ret i32* %16
}

declare dso_local i32* @make_ands_explicit(i32*) #1

declare dso_local i32* @makeBoolExpr(i32, i32, i32) #1

declare dso_local i32 @list_make1(i32*) #1

declare dso_local i64 @eval_const_expressions(i32*, i32*) #1

declare dso_local i32* @canonicalize_qual(i32*, i32) #1

declare dso_local i32* @make_ands_implicit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
